--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,12 @@
-name: Deploy
+name: Test
 
 on:
-  push:
-    branches:
-      - main
-      - develop
+  pull_request:
+    branches: [main]
 
 jobs:
-  build:
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
@@ -23,11 +22,5 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
-      # - name: 🔍 Run Linting
-      #   run: npm run lint
-
-      # - name: 🧪 Run Tests with Vitest
-      #   run: npm test -- --coverage
-
-      - name: 🏗️ Build frontend
-        run: npm run build
+      - name: 🧪 Run Tests with Vitest
+        run: npm test -- --coverage
