--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-scan": "^0.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
